# instagram-magic

./: .gitignore  1  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  test.yml
docs/: whatithink.txt
examples/: attempt.py  login.py  register.py  subscribe_to_random_person_and_like_his_post.py  upload_post.py
instagram_magic/: .instagrambot.py.swp  instagramauth.py  instagrambot.py
src/instagram-magic/: instagram-magic.py
tests/: test_attempt.py  test_instagram_auth.py  test_instagram_auth_with_authorization_data.py
