[metadata]
name = instagram-magic
version = 0.0.2
author = Dmitry Gashilov 
author_email = gashilovdmitry@yandex.ru
description = If you want to learn some tricks, you are welcome 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olsoncarsen/instagram-magic
project_urls =
    Bug Tracker = https://github.com/olsoncarsen/instagram-magic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

